Fix formatting on tablets

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -155,7 +155,7 @@ div.pub > div.pub_picture {
     background-color: white;
     margin: 5px 5px 5px 0px;
     margin-bottom: auto;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 0px 10px 10px;
     position: relative;
 }
 div.pub > div.pub_picture > img.pub_picture_img {
